[gd_scene load_steps=11 format=2]

[ext_resource path="res://images/ships/terran_shuttle.png" type="Texture" id=1]
[ext_resource path="res://Battle/AnimFloat.gd" type="Script" id=2]
[ext_resource path="res://Battle/btl_unit.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.5, 0.01 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.3
direction = Vector3( 0, 1, 0 )
initial_velocity = 2.0
scale_curve = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_color = Color( 1, 0.996078, 0.843137, 1 )

[sub_resource type="QuadMesh" id=6]
material = SubResource( 5 )
size = Vector2( 0.01, 0.01 )

[sub_resource type="Animation" id=7]
resource_name = "dead"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2.963, 0 ), Vector2( -6, 0 ), Vector2( 12, 0 ), Vector2( -6, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Unit" type="Spatial"]
script = ExtResource( 3 )

[node name="Sprite3D" type="Sprite3D" parent="."]
texture = ExtResource( 1 )

[node name="AnimFloat" type="Node" parent="Sprite3D"]
script = ExtResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0471331 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.208992, -0.141792, 0 )
visible = false
lifetime = 0.5
explosiveness = 1.0
fract_delta = false
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 6 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 7 )
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
